--- a/SkolaProjekat/App.config
+++ b/SkolaProjekat/App.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="OracleCS" connectionString="Data source=gislab-oracle.elfak.ni.ac.rs:1521/SBP_PDB;USER ID=S18564;Password=SbTeamBaze" />
+		<add name="OracleCS" connectionString="Data Source=gislab-oracle.elfak.ni.ac.rs:1521/SBP_PDB;User Id=S18564;Password=SbTeamBaze" />
 	</connectionStrings>
 </configuration>
